# aria-query

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
crates/aria_query/: Cargo.toml
crates/aria_query/src/: lib.rs
crates/dom/: Cargo.toml
crates/dom/src/: lib.rs
src/: lib.rs
src/aria/: mod.rs
src/aria/snapshots/: aria_query__aria__test__snapshot_for_entries.snap
src/definition/: mod.rs
src/dom/: mod.rs
src/dom/snapshots/: aria_query__dom__test__snapshot_for_entries.snap  dom__test__snapshot_for_entries.snap
src/role/: aria_abstract_roles.rs  mod.rs  role.rs
src/role/snapshots/: aria_query__role__test__snapshot_for_entries.snap  aria_query__role__test__snapshot_values.snap
